--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #111;
 }
-/* 
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -40,4 +40,4 @@ body {
   to {
     transform: rotate(360deg);
   }
-} */
+}
