--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,5 +1,4 @@
 .banner {
-    background-image: url('https://wallpaperaccess.com/full/2703652.png');
     background-size: cover;
     height: 448px;
     color: white;
@@ -41,11 +40,11 @@
 
 .description {
     width: 45rem;
-    line-height: 1.3rem;
+    line-height: 1.3;
     padding-top: 1rem;
     font-size: 1rem;
     height: 80px;
-    max-width:360 ;
+    max-width:360px ;
 }
 
 .fade_bottom {
