--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -6,7 +6,7 @@
     padding: 20px;
     display: flex;
     justify-content: space-between;
-    background-color: #111;
+    /* background-color: #111; */
 }
 .logo {
     position: fixed;
@@ -16,6 +16,6 @@
 
 .avatar {
     position: fixed;
-    right: 30px;
+    right: 20px;
     width: 30px;
 }
