--- a/src/Components/RowPost/RowPost.css
+++ b/src/Components/RowPost/RowPost.css
@@ -1,6 +1,6 @@
 .row {
     color: #fff;
-    margin-left: 10px;
+    margin-left: 20px;
 }
 
 .posters {
@@ -13,9 +13,18 @@
 p.posters::-webkit-scrollbar {
     display: none;
 }
-
 .poster {
-    max-height: 20px;
+    cursor: pointer;
+    max-height: 250px;
     margin-right: 10px;
+} 
 
+.smallPoster {
+    cursor: pointer;
+    max-height: 100px;
+    margin-right: 10px;
+}
+
+.poster:hover {
+    transform: scale(1.1);
 }
